# testii

./: README.md
fast_api/: pyproject.toml
fast_api/clothingstore/: README.md  main.py
fast_api/clothingstore/src/controllers/: __init__.py  product_controller.py
fast_api/clothingstore/src/models/: __init__.py  product.py
fast_api/clothingstore/src/routes/: __init__.py  product_routes.py
fast_api/clothingstore/src/services/: __init__.py  product_service.py
fast_api/clothingstore/src/types/: __init__.py
fast_api/clothingstore/tests/: test_api.py
